@@ -1,0 +1,42 @@
+/*
+ * aTunes
+ * Copyright (C) Alex Aranda, Sylvain Gaudard and contributors
+ *
+ * See http://www.atunes.org/wiki/index.php?title=Contributing for information about contributors
+ *
+ * http://www.atunes.org
+ * http://sourceforge.net/projects/atunes
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ */
+
+package net.sourceforge.atunes.utils;
+
+import com.esotericsoftware.kryo.Kryo;
+import com.esotericsoftware.kryo.io.Input;
+import com.esotericsoftware.kryo.serializers.DefaultSerializers;
+
+/**
+ * Kryo serializer for String objects. Calls String.intern() when reading to
+ * reduce memory consumption
+ * 
+ * @author alex
+ * 
+ */
+public class StringInternSerializer extends DefaultSerializers.StringSerializer {
+
+	@Override
+	public String read(final Kryo kryo, final Input input,
+			final Class<String> type) {
+		return super.read(kryo, input, type).intern();
+	}
+
+}
